# soc-log-analyzer

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  render.yaml  test_analyzer.py
.github/workflows/: ci.yml
data/sample_logs/: windows_events.csv
src/soc_analyzer/: __init__.py  alerting.py  cli.py  formatters.py  geoip.py  parser.py  rules.py  watcher.py
templates/: index.html
tests/: test_analyzer.py
